--- a/NESCAFE/Venetian.html
+++ b/NESCAFE/Venetian.html
@@ -2293,7 +2293,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i2.i4.slice-image.html:slice-image/html-->
 <dataimg id="i4" src="https://i.imgur.com/9gorSYq.png"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/tLxRvQB.png"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/IL5WhDK.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
 <dataimg id="i6" src="https://i.imgur.com/tZnj4S8.png"></dataimg>
 <!--#/#-->
@@ -2303,7 +2303,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i153.text.html:text/html-->
 <div id="i153">¿Ya sabes qué hacer después de disfrutar de tu bebida de NESCAFÉ® DOLCE GUSTO®?</div>
 <!--#/#--><!--#i155.text.html:text/html-->
-<div id="i155">Súmate a nuestro programa de recolección. Después de utilizar tus cápsulas de Nescafé® Dolce Gusto® sigue estos sencillos pasos</div>
+<div id="i155">Súmate a nuestro plan de reciclje. Después de utilizar tus cápsulas de Nescafé® Dolce Gusto® sigue estos sencillos pasos</div>
 <!--#/#--><!--#i157.text.html:text/html-->
 <div id="i157">Leer más ...</div>
 <!--#/#--><!--#i68.shape.html:shape/html-->
