--- a/NESCAFE/FadeBig.html
+++ b/NESCAFE/FadeBig.html
@@ -61,7 +61,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/XFP6Xa6.png");
+            background: url("https://i.imgur.com/N4i4TPV.jpg");
             background-size: cover;
         }
 
@@ -341,7 +341,7 @@
 </head>
 
 <body class="tgx">
-    <a href= "https://ecolana.com.mx/ecomapa/blog-capsulas.html" target="_blank">
+    <a href= " https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/?utm_source=mosaic&utm_campaign=reciclaje_marzo&utm_medium=native&utm_term=cpm" target="_blank">
     <div class="tgx_wrapper carousel-wrapper size_320x480" id="cta" onclick="openUrl();">
         <div class="cta"><img src="https://i.imgur.com/W84yU9m.png" style="height: 45px;"></div>
        
@@ -357,7 +357,7 @@
        
         <div class="tgx_text"> 
             <span class="tgx_text_title tgx_text_bold">
-              Ayúdanos a que tus cápsulas revivan, que  lleguen a donde tienen que llegar.
+             Conoce nuestra solución para el acopio y reciclaje de nuestras cápsulas.
             </span>
             <br/>
              <span class="tgx_text tgx_text_small" style="margin-top:-6px;">
@@ -370,13 +370,13 @@
 
            <div id="botones-para-compartir" style="display:inline;float:left;margin-left:5px; margin-top: 568px;">
                     <span>  
-                        <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://ecolana.com.mx/ecomapa/blog-capsulas.html"  target="block">    
+                        <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u= https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/?utm_source=mosaic&utm_campaign=reciclaje_marzo&utm_medium=native&utm_term=cpm"  target="block">    
                         <img alt="compartir en facebook" class="facebooki" height="25" src="https://i.imgur.com/brcaBmD.png" title="compartir en facebook" width="25" /></a>
 
-                            <a class="shared" href="whatsapp://send?text=Mira lo que he encontrado https://ecolana.com.mx/ecomapa/blog-capsulas.html" target="block">
+                            <a class="shared" href="whatsapp://send?text=Mira lo que he encontrado  https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/?utm_source=mosaic&utm_campaign=reciclaje_marzo&utm_medium=native&utm_term=cpm" target="block">
                             <img alt="compartir en whatsapp" class="googlei" height="25" src="https://i.imgur.com/cPJnhfU.png" title="compartir en whatsapp" width="25" /></a>
 
-                            <a class="shared" href="https://twitter.com/home?status=https://ecolana.com.mx/ecomapa/blog-capsulas.html" target="block">
+                            <a class="shared" href="https://twitter.com/home?status= https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/?utm_source=mosaic&utm_campaign=reciclaje_marzo&utm_medium=native&utm_term=cpm" target="block">
                             <img alt="compartir en twitter" class="twitteri" height="25" src="https://i.imgur.com/AGEmiBA.png" title="compartir en twitter" width="25" /></a>
                     </span>
                 </div>
