--- a/NESCAFE/cube.html
+++ b/NESCAFE/cube.html
@@ -991,7 +991,7 @@ var el = document.getElementById('i91');
 
 el.addEventListener('click', function(e){
     /*#i388.i389.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', ' https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/?utm_source=mosaic&utm_campaign=reciclaje_marzo&utm_medium=native&utm_term=cpm'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1008,7 +1008,7 @@ var el = document.getElementById('i382');
 
 el.addEventListener('click', function(e){
     /*#i394.i395.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://www.facebook.com/sharer/sharer.php?u=https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://www.facebook.com/sharer/sharer.php?u= https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/?utm_source=mosaic&utm_campaign=reciclaje_marzo&utm_medium=native&utm_term=cpm'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1025,7 +1025,7 @@ var el = document.getElementById('i384');
 
 el.addEventListener('click', function(e){
     /*#i392.i393.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text= https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/?utm_source=mosaic&utm_campaign=reciclaje_marzo&utm_medium=native&utm_term=cpm'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1042,7 +1042,7 @@ var el = document.getElementById('i386');
 
 el.addEventListener('click', function(e){
     /*#i390.i391.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://twitter.com/home?status=https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://twitter.com/home?status= https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/?utm_source=mosaic&utm_campaign=reciclaje_marzo&utm_medium=native&utm_term=cpm'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1066,7 +1066,7 @@ var el = document.getElementById('i95');
 
 el.addEventListener('click', function(e){
     /*#i430.i431.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', ' https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/?utm_source=mosaic&utm_campaign=reciclaje_marzo&utm_medium=native&utm_term=cpm'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1083,7 +1083,7 @@ var el = document.getElementById('i400');
 
 el.addEventListener('click', function(e){
     /*#i428.i429.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://www.facebook.com/sharer/sharer.php?u=https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://www.facebook.com/sharer/sharer.php?u= https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/?utm_source=mosaic&utm_campaign=reciclaje_marzo&utm_medium=native&utm_term=cpm'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1100,7 +1100,7 @@ var el = document.getElementById('i408');
 
 el.addEventListener('click', function(e){
     /*#i426.i427.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text= https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/?utm_source=mosaic&utm_campaign=reciclaje_marzo&utm_medium=native&utm_term=cpm'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1117,7 +1117,7 @@ var el = document.getElementById('i416');
 
 el.addEventListener('click', function(e){
     /*#i424.i425.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://twitter.com/home?status=https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://twitter.com/home?status= https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/?utm_source=mosaic&utm_campaign=reciclaje_marzo&utm_medium=native&utm_term=cpm'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1141,7 +1141,7 @@ var el = document.getElementById('i99');
 
 el.addEventListener('click', function(e){
     /*#i438.i439.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', ' https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/?utm_source=mosaic&utm_campaign=reciclaje_marzo&utm_medium=native&utm_term=cpm'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1158,7 +1158,7 @@ var el = document.getElementById('i404');
 
 el.addEventListener('click', function(e){
     /*#i436.i437.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://www.facebook.com/sharer/sharer.php?u=https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://www.facebook.com/sharer/sharer.php?u= https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/?utm_source=mosaic&utm_campaign=reciclaje_marzo&utm_medium=native&utm_term=cpm'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1175,7 +1175,7 @@ var el = document.getElementById('i412');
 
 el.addEventListener('click', function(e){
     /*#i434.i435.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text= https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/?utm_source=mosaic&utm_campaign=reciclaje_marzo&utm_medium=native&utm_term=cpm'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1192,7 +1192,7 @@ var el = document.getElementById('i420');
 
 el.addEventListener('click', function(e){
     /*#i432.i433.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://twitter.com/home?status=https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://twitter.com/home?status= https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/?utm_source=mosaic&utm_campaign=reciclaje_marzo&utm_medium=native&utm_term=cpm'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
