--- a/NESCAFE/Venetian.html
+++ b/NESCAFE/Venetian.html
@@ -2303,7 +2303,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i153.text.html:text/html-->
 <div id="i153">¿Ya sabes qué hacer después de disfrutar de tu bebida de NESCAFÉ® DOLCE GUSTO®?</div>
 <!--#/#--><!--#i155.text.html:text/html-->
-<div id="i155">Súmate a nuestro plan de reciclje. Después de utilizar tus cápsulas de Nescafé® Dolce Gusto® sigue estos sencillos pasos</div>
+<div id="i155">Súmate a nuestro plan de reciclaje. Después de utilizar tus cápsulas de Nescafé® Dolce Gusto® sigue estos sencillos pasos</div>
 <!--#/#--><!--#i157.text.html:text/html-->
 <div id="i157">Leer más ...</div>
 <!--#/#--><!--#i68.shape.html:shape/html-->
