--- a/Xcaret Descuentos/728x90.html
+++ b/Xcaret Descuentos/728x90.html
@@ -96,7 +96,7 @@
 
         .bg.cover-1 {
             
-            background: url("https://i.imgur.com/DWwmkBM.gif"");
+            background: url("https://i.imgur.com/DWwmkBM.gif");
             background-size: cover
         }
 
