--- a/Xcaret Descuentos/Fade320x480.html
+++ b/Xcaret Descuentos/Fade320x480.html
@@ -376,7 +376,7 @@
             </span>
             <br/>  
             <span class="roca_text_light roca_text_small" style="color:black;">
-                <p style="margin-right:10px; text-align: justify; width: 90%; margin-top: 9px;">
+                <p style="margin-right:10px; text-align: center; width: 90%; margin-top: 9px;">
                     Se el primero en recibir las promociones especiales de verano 2019.
 
 
