--- a/XCARET DESCUENTOS US/728x90.html
+++ b/XCARET DESCUENTOS US/728x90.html
@@ -96,7 +96,7 @@
 
         .bg.cover-1 {
             
-            background: url("https://i.imgur.com/e8aI138.gif");
+            background: url("https://i.imgur.com/v6LUPo8.gif");
             background-size: cover
         }
 
