--- a/XCARET DESCUENTOS US/Fade_320x480.html
+++ b/XCARET DESCUENTOS US/Fade_320x480.html
@@ -166,9 +166,9 @@
 
         .roca_text {
             position: absolute;
-            top: 72%;
-            left: -0px;
-            width: 110%;
+            top: 77%;
+            left: 15px;
+            width: 100%;
             padding: 0.3em;
             line-height: 1em;
             color: black;
@@ -350,8 +350,8 @@
             float: right;
             height: 30px;
             text-align: center;
-            margin-top: -10px;
-            margin-right: -10px
+            margin-top: 0px;
+            margin-right: -15px
         }
 
     </style>
@@ -363,24 +363,24 @@
       <a href="%%c1;cpdir=" style="display: block;" target="_blank">
             <div class="roca_cover bg cover-1 carousel-item item-1">
             <div class="roca_logo"><span class="roca_text_small roca_text_medium">
-               <i>Ready to discover?</i></span></div>
+               <i>Buy now!</i></span></div>
         </div>
         <div class="roca_cover bg cover-2 carousel-item item-2">
             <div class="roca_logo"><span class="roca_text_small roca_text_medium">
-                <i>Ready to discover?</i></span></div>
+                <i>Buy now!</i></span></div>
         </div>
         <div class="roca_cover bg cover-3 carousel-item item-3">
             <div class="roca_logo"><span class="roca_text_small roca_text_medium">
-                <i>Ready to discover?</i></span></div>
+                <i>Buy now!</i></span></div>
         </div>
         <div class="roca_text"> 
             <span class="roca_text_title roca_text_bold">
-              From May, 9th to 12th. Exclusive discounts!
+              Get exclusive discounts until May 12th.
             </span>
             <br/>  
             <span class="roca_text_light roca_text_light" style="color:black;">
-                <p style="margin-right:10px; text-align: center; width: 90%; margin-top: 9px;">
-                    Be the first one to receive the special promotions of the Xcaret Summer Sale 2019.
+                <p style="margin-right:10px; text-align: center; width: 100%; margin-top: 9px; margin-left: -15px;">
+                   
 
 
                 </p> 
