--- a/XCARET DESCUENTOS US/Venetian_300x600.html
+++ b/XCARET DESCUENTOS US/Venetian_300x600.html
@@ -2189,32 +2189,23 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i50.text.css:text/base/css*/
-#i50 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i50.i51.positioning.css:positioning/base/css.2*/
-#i50 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 286px; height: 62px;
-        -ms-transform: translate(0, 0) translate(7px, 521px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(7px, 521px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(7px, 521px) rotate(0deg);
-        transform: translate(0, 0) translate(7px, 521px) rotate(0deg);
-}
 /*#/#*//*#i7.text.css:text/base/css*/
-#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 18px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 20px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
-#i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 123px;
-        -ms-transform: translate(0, 0) translate(2px, 474px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(2px, 474px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(2px, 474px) rotate(0deg);
-        transform: translate(0, 0) translate(2px, 474px) rotate(0deg);
+#i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 234px; height: 53px;
+        -ms-transform: translate(0, 0) translate(36px, 494px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(36px, 494px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(36px, 494px) rotate(0deg);
+        transform: translate(0, 0) translate(36px, 494px) rotate(0deg);
 }
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 52px; height: 36px;
-        -ms-transform: translate(0, 0) translate(243px, 560px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(243px, 560px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(243px, 560px) rotate(0deg);
-        transform: translate(0, 0) translate(243px, 560px) rotate(0deg);
+#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 56px; height: 39px;
+        -ms-transform: translate(0, 0) translate(237px, 554px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(237px, 554px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(237px, 554px) rotate(0deg);
+        transform: translate(0, 0) translate(237px, 554px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2237,11 +2228,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i45.image.css:image/base/css*/
 #i45 { opacity: 1; }
 /*#/#*//*#i45.i46.positioning.css:positioning/base/css.2*/
-#i45 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 161px; height: 45px;
-        -ms-transform: translate(0, 0) translate(69px, 427px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(69px, 427px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(69px, 427px) rotate(0deg);
-        transform: translate(0, 0) translate(69px, 427px) rotate(0deg);
+#i45 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 142px; height: 47px;
+        -ms-transform: translate(0, 0) translate(78px, 430px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(78px, 430px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(78px, 430px) rotate(0deg);
+        transform: translate(0, 0) translate(78px, 430px) rotate(0deg);
 }
 /*#/#*//*#i26.button.css:button/base/css*/
 #i26 { position: absolute; cursor: pointer; opacity: 1.00; background-color: rgba(0,0,0,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 0%; letter-spacing: 5px; text-shadow: 0px 0px 0px rgba(0,0,0,0); border-radius: 1px; border-color: rgba(115,112,112,1); border-width: 1px; margin:-1px; border-style: solid; }
@@ -2272,10 +2263,8 @@ url('fonts/') format('svg');
 <body>
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
-<!--#/#--><!--#i50.text.html:text/html-->
-<div id="i50">Be the first one to receive the special promotions of the Xcaret Summer Sale 2019.</div>
 <!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7">From May, 9th to 12th. Exclusive discounts!</div>
+<div id="i7">Get exclusive discounts until May 12th.</div>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/MSQr2vw.png"/>
 <!--#/#--><!--#i2.slice.html:slice/html-->
@@ -2289,7 +2278,7 @@ url('fonts/') format('svg');
 <!--#/#-->
 </div>
 <!--#/#--><!--#i45.image.html:image/html-->
-<img id="i45" src="https://i.imgur.com/GJe6MJi.png"/>
+<img id="i45" src="https://i.imgur.com/hMAyZ0j.png"/>
 <!--#/#--><!--#i26.button.html:button/html-->
 <button id="i26"></button>
 <!--#/#--><!--#i37.font.html:font/html-->
@@ -2379,8 +2368,6 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i50.i51.positioning.js:positioning/base/js.2*/
-bmShow('i50');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2398,12 +2385,8 @@ function bmHide(id) {
 name: Shape 1;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i50.text.meta:text/meta*/
-name: Be the first one to receive the special promotions of the Xcaret Summer Sale 2019.; customName: false;
-/*#/#*//*#i50.i51.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i7.text.meta:text/meta*/
-name: From May, 9th to 12th. Exclusive discounts!; customName: false;
+name: Get exclusive discounts until May 12th.; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
