--- a/Xcaret Descuentos/Fade320x480.html
+++ b/Xcaret Descuentos/Fade320x480.html
@@ -52,7 +52,7 @@
         body.roca {
             background-color: #FFFFFF;
             color: black;
-            font-family: Source Sans Pro;
+            font-family: Trebuchet MS;
             margin: 0;
             padding: 0;
         }
@@ -67,7 +67,7 @@
             position:absolute;
             overflow:hidden;
             cursor: pointer;
-            font-family: Source Sans Pro;
+            font-family: Trebuchet MS;
             border: 1px solid #c5c5c5;
         }
 
@@ -175,7 +175,7 @@
         }
 
         .roca_text_title {
-            font-size: 135%;
+            font-size: 150%;
             color: #453936;
             display: inline-block;
             width: 95%;
@@ -199,7 +199,7 @@
         }
 
         .roca_text_small {
-            font-size: 97%;
+            font-size: 92%;
         }
 
         ul {
@@ -362,22 +362,22 @@
     <div class="roca_wrapper carousel-wrapper size_320x480" id="cta" onclick="openUrl();">
       <a href="%%c1;cpdir=" style="display: block;" target="_blank">
             <div class="roca_cover bg cover-1 carousel-item item-1">
-            <div class="roca_logo"><span class="roca_text_bold roca_text_small">¡Aprovéchalo!</span></div>
+            <div class="roca_logo"><span class="roca_text_bold roca_text_small">¡Compra ahora!</span></div>
         </div>
         <div class="roca_cover bg cover-2 carousel-item item-2">
-            <div class="roca_logo"><span class="roca_text_bold roca_text_small">¡Aprovéchalo!</span></div>
+            <div class="roca_logo"><span class="roca_text_bold roca_text_small">¡Compra ahora!</span></div>
         </div>
         <div class="roca_cover bg cover-3 carousel-item item-3">
-            <div class="roca_logo"><span class="roca_text_bold roca_text_small">¡Aprovéchalo!</span></div>
+            <div class="roca_logo"><span class="roca_text_bold roca_text_small">¡Compra ahora!</span></div>
         </div>
         <div class="roca_text"> 
             <span class="roca_text_title roca_text_bold">
-              ¡Desde el 9 al 12 de Mayo, llévate descuentos exclusivos!
+              ¡Consigue descuentos exclusivos sólo hasta el 12 de Mayo!
             </span>
             <br/>  
             <span class="roca_text_light roca_text_small" style="color:black;">
                 <p style="margin-right:10px; text-align: center; width: 90%; margin-top: 9px;">
-                    Se el primero en recibir las promociones especiales de verano 2019.
+                    
 
 
                 </p> 
