--- a/Xcaret Descuentos/Venetian300x600.html
+++ b/Xcaret Descuentos/Venetian300x600.html
@@ -2210,9 +2210,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i37.text.css:text/base/css*/
-#i37 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 19px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i37 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 24px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i37.i38.positioning.css:positioning/base/css.2*/
-#i37 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 277px; height: 73px;
+#i37 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 277px; height: 173px;
         -ms-transform: translate(0, 0) translate(12px, 473px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(12px, 473px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(12px, 473px) rotate(0deg);
@@ -2237,11 +2237,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(235px, 554px) rotate(0deg);
 }
 /*#/#*//*#i43.button.css:button/base/css*/
-#i43 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(230,0,0,1); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(230,0,0,1); border-width: 1px; margin:-1px; border-style: solid; }
+#i43 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(230,0,0,1); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 13px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(230,0,0,1); border-width: 1px; margin:-1px; border-style: solid; }
 #i43:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 #i43:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 /*#/#*//*#i43.i44.positioning.css:positioning/base/css.2*/
-#i43 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 127px; height: 30px;
+#i43 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 130px; height: 30px;
         -ms-transform: translate(0, 0) translate(87px, 434px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(87px, 434px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(87px, 434px) rotate(0deg);
@@ -2275,13 +2275,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#-->
 </div>
 <!--#/#--><!--#i37.text.html:text/html-->
-<div id="i37">¡Desde el 9 al 12 de Mayo, llévate descuentos exclusivos!</div>
+<div id="i37">¡Consigue descuentos exclusivos sólo hasta el 12 de Mayo!</div>
 <!--#/#--><!--#i39.text.html:text/html-->
-<div id="i39">Se el primero en recibir las promociones especiales de verano 2019.</div>
+
 <!--#/#--><!--#i41.image.html:image/html-->
 <img id="i41" src="https://i.imgur.com/4ZhA6TO.png"/>
 <!--#/#--><!--#i43.button.html:button/html-->
-<button id="i43">¡Aprovéchalo!</button>
+<button id="i43">¡Compra ahora!</button>
 <!--#/#--><!--#i26.button.html:button/html-->
 <button id="i26"></button>
 <!--#/#--><!--#/#--><!--#js:common/js-->
